完善rabbitMq的相关代码和配置文件

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,6 @@ MQConsumer/obj/Debug/
 MQFactory/bin/
 MQFactory/obj/Debug/
 
+#1，docker study and run authserver
+#2，identity4 for dotnet core
+#3，code first and create foreight key for dotnet core
