--- a/MQConsumer/MQConsumer.csproj
+++ b/MQConsumer/MQConsumer.csproj
@@ -9,4 +9,8 @@
       <PackageReference Include="RabbitMQ.Client" Version="5.1.2" />
     </ItemGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\MQConfig\MQConfig.csproj" />
+    </ItemGroup>
+
 </Project>
