优化部分代码,加入js demo

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@ MQFactory/obj/Debug/
 #1，docker study and run authserver
 #2，identity4 for dotnet core
 #3，code first and create foreight key for dotnet core
+
+*.dll
+.pdb
+.log
